[package]
name = "eth_middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.2"
pickledb = "0.5.1"
serde = "1.0.159"
serde_json = "1.0.95"
ethers = { version = "1.0.2", features = ["rustls"] }
actix-cors = "0.6.4"
env_logger = "0.10.0"
